--- a/alchemical-artistry/openloader/resources/contenttweaker/assets/contenttweaker/lang/en_gb.json
+++ b/alchemical-artistry/openloader/resources/contenttweaker/assets/contenttweaker/lang/en_gb.json
@@ -1,7 +1,7 @@
 {
   "item.contenttweaker.ticket": "Matter Ticket",
   "item.contenttweaker.ticket_catalyst": "Matter Ticket Catalyst",
-  "item.contenttweaker.amc_crystal_submicroscopic": "Sub-Microscopic Matter Crystal",
+  "item.contenttweaker.amc_crystal_submicroscopic": "Sub-microscopic Matter Crystal",
   "item.contenttweaker.amc_crystal_microscopic": "Microscopic Matter Crystal",
   "item.contenttweaker.amc_crystal_miniscule": "Miniscule Matter Crystal",
   "item.contenttweaker.amc_crystal_tiny": "Tiny Matter Crystal",
@@ -12,6 +12,7 @@
   "item.contenttweaker.very_advanced_alchemical_catalyst": "Very Advanced Alchemical Catalyst",
   "item.contenttweaker.alchemical_crystallization_catalyst": "Alchemical Crystallisation Catalyst",
   "item.contenttweaker.alchemical_compression_catalyst": "Alchemical Compression Catalyst",
+  "item.contenttweaker.alchemical_crystalpress_catalyst": "Alchemical Crystalpression Catalyst",
   "item.contenttweaker.token_catalyst": "Token Catalyst",
   "item.contenttweaker.advanced_token_catalyst": "Advanced Token Catalyst",
   "item.contenttweaker.very_advanced_token_catalyst": "Very Advanced Token Catalyst",
@@ -31,10 +32,11 @@
   "item.contenttweaker.50-bag": "Alchemical Bag (Holding 50 AMC)",
   "item.contenttweaker.100-bag": "Alchemical Bag (Holding 100 AMC)",
   "item.contenttweaker.crate": "Empty Alchemical Crate",
-  "item.contenttweaker.250-crate": "Alchemical Crate (Holding 250 AMC)",
-  "item.contenttweaker.500-crate": "Alchemical Crate (Holding 500 AMC)",
-  "item.contenttweaker.1k-crate": "Alchemical Crate (Holding 1,000 AMC)",
-  "item.contenttweaker.5k-crate": "Alchemical Crate (Holding 5,000 AMC)",
-  "item.contenttweaker.10k-crate": "Alchemical Crate (Holding 10,000 AMC)",
+  "item.contenttweaker.250-crate": "Alchemical Crate (Storing 250 AMC)",
+  "item.contenttweaker.500-crate": "Alchemical Crate (Storing 500 AMC)",
+  "item.contenttweaker.1k-crate": "Alchemical Crate (Storing 1,000 AMC)",
+  "item.contenttweaker.5k-crate": "Alchemical Crate (Storing 5,000 AMC)",
+  "item.contenttweaker.10k-crate": "Alchemical Crate (Storing 10,000 AMC)",
+  "item.contenttweaker.alchemical_sampling": "Alchemical Sampling",
   "item.contenttweaker.frozen_reagent": "Frozen Reagent"
 }
