--- a/netherium/openloader/resources/contenttweaker/assets/contenttweaker/lang/en_us.json
+++ b/netherium/openloader/resources/contenttweaker/assets/contenttweaker/lang/en_us.json
@@ -14,5 +14,6 @@
   "item.contenttweaker.uranium_canister": "Uranium Fuel Canister",
   "item.contenttweaker.uranium_rod": "Uranium Fuel Rod",
   "item.contenttweaker.uranium_fuel_core": "Uranium Fuel Core",
-  "item.contenttweaker.wrapped_fuel_core": "Wrapped Fuel Cores"
+  "item.contenttweaker.wrapped_fuel_core": "Wrapped Fuel Cores",
+  "item.contenttweaker.portal": "Portal"
 }
