--- a/netherium/openloader/resources/contenttweaker/assets/contenttweaker/lang/en_gb.json
+++ b/netherium/openloader/resources/contenttweaker/assets/contenttweaker/lang/en_gb.json
@@ -15,5 +15,5 @@
   "item.contenttweaker.uranium_rod": "Uranium Fuel Rod",
   "item.contenttweaker.uranium_fuel_core": "Uranium Fuel Core",
   "item.contenttweaker.wrapped_fuel_core": "Wrapped Fuel Cores",
-  "item.contenttweaker.portal": "Portal"
+  "item.contenttweaker.netherrack_fuel_pod": "Netherrack Fuel Pod"
 }
