--- a/capitalia/server_pack/resources/contenttweaker/lang/en_us.lang
+++ b/capitalia/server_pack/resources/contenttweaker/lang/en_us.lang
@@ -1,2 +1,2 @@
-contenttweaker.liquid_research.fluidName=Liquified Research
-contenttweaker.alien_goo.fluidName=Alien Goo
+fluid.contenttweaker.liquid_research.fluidName=Liquified Research
+fluid.contenttweaker.alien_goo.fluidName=Alien Goo
