--- a/capitalia/resources/contenttweaker/lang/en_us.lang
+++ b/capitalia/resources/contenttweaker/lang/en_us.lang
@@ -1,2 +1,3 @@
-fluid.contenttweaker.liquid_research.fluidName=Liquified Research
-fluid.contenttweaker.alien_goo.fluidName=Alien Goo
+fluid.research.fluidName=Liquified Research
+fluid.alien_goo.fluidName=Alien Goo
+fluid.hell_goo.fluidName=Hellish Viscera
