--- a/changelogs/hi-tech-revolution/H0.1 Changelog.md
+++ b/changelogs/hi-tech-revolution/H0.1 Changelog.md
@@ -1,11 +1,12 @@
 Initial release.
 
 
-# Changes from Beta 3
+
+# Changes since Beta 3
 
 ## Main changes
 
-Changed the namespace of all my custom tags to `revolution` (was `modpack`)
+Changed the namespace of all my custom tags to `revolution` (was `modpack`)<br />
 Fixed my custom datapacks having the wrong pack format
 - This doesn't really affect anything, but I'm annoyed that I misread the wiki when I first made them
 
@@ -15,9 +16,9 @@ Enabled the Extractinator
 - I might make a Mark II version in the future that uses RF to get improved rates, but managing 2 sets of almost identical recipes would be *very* annoying - so it's just a vague idea for the time being
 
 
-All the auto-crafters now have a set progression order based on their utility and ability to be automated (order: Quark -> XyCraft/Thermal -> RFTools -> AE2)
-Added recipes to process most items from Alex's Caves into other stuff (or at least have some use outside of a few specialized items)
-Some recycling recipes I missed now give XP (Essence of Knowledge for Shredder recipes)
+All the auto-crafters now have a set progression order based on their utility and ability to be automated (order: Quark -> XyCraft/Thermal -> RFTools -> AE2)<br />
+Added recipes to process most items from Alex's Caves into other stuff (or at least have some use outside of a few specialized items)<br />
+Some recycling recipes I missed now give XP (Essence of Knowledge for Shredder recipes)<br />
 - Includes the Saddle, Name Tag, (Cross)bow, Lead, Maps, and all of my Sawmill recipes
 
 
@@ -29,47 +30,48 @@ Configured Bigger Reactors to be the final stage of power generation
 - The actual config options are really complicated, so for now those remain at the defaults - but I will change them whenever I figured out what each setting does
 
 
+
 ## Bugfixes
 
-Fixed all my multiblock machine recipes not using item chances when they should
-Fixed Uranium Ingots being boostable in a Pulverizer
-Fixed the Floater recipe not be checkable because I hid Ping-Pong Sponges from REI
+Fixed Uranium Ingots being boostable in a Pulverizer<br />
+Fixed all my multiblock machine recipes not using item chances when they should<br />
+Fixed the Floater recipe not be checkable because I hid Ping-Pong Sponges from REI<br />
 Fixed the smelting recipe for Diamond Scrap being in a Blast Furnace
 
 
-Fixed Galosphere's Silver Blocks having the incorrect mining level
-Fixed the RF Cost for Sawmill recipes not matching my intended system on a few recipes
-Fixed the recipe for Honey Bottles -> Honey accepting Syrup Bottles
-Fixed the Dye Extractor's Redstone -> Red Dye recipe not loading in
+Fixed Galosphere's Silver Blocks having the incorrect mining level<br />
+Fixed the RF Cost for Sawmill recipes not matching my intended system on a few recipes<br />
+Fixed the recipe for Honey Bottles -> Honey accepting Syrup Bottles<br />
+Fixed the Dye Extractor's Redstone -> Red Dye recipe not loading in<br />
 Fixed the Shredder recipe for Polymer Plates missing 2 outputs
 
 
-Fixed the recipe for Bonded Leather using the `forge:leather` tag when it shouldn't
-Fixed the recipes for Slime Blocks using the `forge:slimeballs` tag when they shouldn't
-Fixed the Multiservo Press recipe for Stick Blocks using the `forge:rods/wooden` tag when it shouldn't
+Fixed the recipe for Bonded Leather using the `forge:leather` tag when it shouldn't<br />
+Fixed the recipes for Slime Blocks using the `forge:slimeballs` tag when they shouldn't<br />
+Fixed the Multiservo Press recipe for Stick Blocks using the `forge:rods/wooden` tag when it shouldn't<br />
 Fixed all the missing tags for items from Silver Birch
-- I reported this to the dev and an update was released that fixed it (except for the Shelf Fungus, Leaves, Sapling, Fence, Fence Gate, and all the Shelf Fungus furniture), but I'm claiming credit for doing it first
+- I reported this to the dev and an update was released that fixed most of them (but not the Shelf Fungus, Leaves, Sapling, Fence, Fence Gate, and all the Shelf Fungus furniture), but I'm claiming credit for doing it first
 
 
 
 ## Balance changes
 
-Adjusted the RF drain rates for Angel Rings (again...)
-Copper Coins (from CoinsJE) can no longer be turned into RF
+Adjusted the RF drain rates for Angel Rings (again...)<br />
+Copper Coins (from CoinsJE) can no longer be turned into RF<br />
 Tweaked my custom catalysts for TE machines
 
 
 
 ## Quest changes
 
-Replaced the Echo Shard sell quest with one to sell an Immortal Embryo
+Replaced the Echo Shard sell quest with one to sell an Immortal Embryo<br />
 "Dischantment" now gives 4 - 8 Books (in addition to the Gold Coin)
 
 
 
 ## Recipe changes
 
-Added a recipe to reprocess Redstone Lamps
+Added a recipe to reprocess Redstone Lamps<br />
 Overhauled all Reprocessing recipes
 - Blocks now take 30 seconds to process (with a few exceptions)
 - Soft blocks now take 20 seconds (e.g. Flesh)
@@ -92,57 +94,60 @@ Changed the follow Reprocessing recipes:
 -- Reduced the chance to get Aluminum Nuggets to 35% (was 40%). Increased the amount to 4 (was 3)
 
 
-Finished importing my Sawmill Recycling script
-Moved the Quicklime -> Paper recipe to the Crafting Table (and it now gives 3 per craft)
+Finished importing my Sawmill Recycling script<br />
+Moved the Quicklime -> Paper recipe to the Crafting Table (and it now gives 3 per craft)<br />
 The Loot Fabricator now requires a Sequential Fabricator (previous also accepted XyCraft's Fabricator)
 - Also swapped Neodymium Ingots for Steel Ingots
-Downgrading IO Ports now uses Filnt (was Stone Stick)
-Large Item Inputs now require a Speed Hopper (was regular)
-Crafting Thermal Expansion's Rose Gold now gives 3 Ingots (was 2)
+Downgrading IO Ports now uses Filnt (was Stone Stick)<br />
+Large Item Inputs now require a Speed Hopper (was regular)<br />
+Crafting Thermal Expansion's Rose Gold now gives 3 Ingots (was 2)<br />
 Moved Nourished Nether's soul block smelting recipes to the Blast Furnace
 
 
-Moved the recipe for Flawless Budding Certus Quartz to the Crystal Transmutator
+Moved the recipe for Flawless Budding Certus Quartz to the Crystal Transmutator<br />
 Moved the vanilla recipes for Concrete to the Amalgamation Station
 - Added tag support to both versions
 Added a recipe to craft Compressed Sawdust in a Multiservo Press
 - Made the regular recipe more expensive to encourage players to use this one
 
 
-Combined both recipes for Reactor Coolant Manifolds
+Combined both recipes for Reactor Coolant Manifolds<br />
 Overhauled all the recipes for Starch
 - Regular and Compressed Starch now require machinery (either an Amalgamation Station or Multiservo Press) and added a fluid version (Multiservo Press only)
 - PLA Sheets now require an Amalgamation Station (2x the item cost, but uses no RF) or Multiservo Press
 
 
-Uranium Rods now use Iron Rods (was Steel) and Raw Uranium (was Ingots)
-Tweaked the Crystal Transmutator recipe for Certus Quartz (uses 8 Xychorium and ouputs 8 items with varying chances)
+Added a recipe to process Latex into Rubber<br />
+Added a recipe to process XyCraft's Resin into Resin Balls<br />
+Uranium Rods now use Iron Rods (was Steel) and Raw Uranium (was Ingots)<br />
+Tweaked the Crystal Transmutator recipe for Certus Quartz (uses 8 Xychorium and ouputs 8 items with varying chances)<br />
+Steel Compound now requires a Block of (Char)coal and has a 50% output chance (was 35%)<br /><br />
+My Separator recipes for Disc Residue and Coal now give TE Oil (was Ad Astra)<br />
+Re-enabled Quark's Gunpowder Sack and added Transmutator recipes for it<br />
 Fixed some Quark variants being uncraftable when they shouldn't be
 - Reported it to the devs, so hopefully they fix it soon
-Re-enabled Quark's Gunpowder Sack and added Transmutator recipes for it
-Steel Compound now requires a Block of (Char)coal and has a 50% output chance (was 35%)
-My Separator recipes for Disc Residue and Coal now give TE Oil (was Ad Astra)
-Added a recipe to process XyCraft's Resin into Resin Balls
-Added a recipe to process Latex into Rubber
 
 
-Changed the Simulation Chamber and Loot Fabricator to use Steel
-Added a recipe to craft Data Models with Polymer Plates
-- Also added one for Prediction Matrices
-- Both recipes give extra output for a slightly higher cost
-Chalk Block Reprocessing/Pulverizing now gives 3 Chalk
-Reduced the Glue recipe for Crying Obsidan to 2 Glue (was 4)
-Tweaked the ratios of my custom recycling items (all of them are now 2:1, except Pulp)
-The Totem of Post-Mortum can now be equipped in the Charm slot
-Reduced the RF Cost for the Separator recipe for Ferrouslimeballs to 2,000 (was 2,400)
+Changed the Simulation Chamber and Loot Fabricator to use Steel<br />
+Chalk Block Reprocessing/Pulverizing now gives 3 Chalk<br />
+Reduced the Glue recipe for Crying Obsidan to 2 Glue (was 4)<br />
+Tweaked the ratios of my custom recycling items (all of them are now 2:1, except Pulp)<br />
+The Totem of Post-Mortum can now be equipped in the Charm slot<br />
+Reduced the RF Cost for the Separator recipe for Ferrouslimeballs to 2,000 (was 2,400)<br />
+
+
 Reduced the White Dye given by the Heavy Bone to 2
 - Added a Centrifugal Separator recipe that gives 3
 
+Added a recipe to craft Data Models with Polymer Plates
+- Also added one for Prediction Matrices
+- Both recipes give extra output for a slightly higher cost
 
-The placeholder recipe for the Abyssal Chasm Cave Codex now requires a Water Block (was a Water Bucket)
-The placeholder recipe for the Forlorn Hollow Cave Codex now requires any Rockwool (was any Wool)
-The placeholder recipe for the Magnetic Cavern Cave Codex now requires an Iron Gear (was an Ingot or Dust)
-The placeholder recipe for the Primordial Grotto Cave Codex now requires 4 Eggs (was 1 Egg)
+
+The placeholder recipe for the Abyssal Chasm Cave Codex now requires a Water Block (was a Water Bucket)<br />
+The placeholder recipe for the Forlorn Hollow Cave Codex now requires any Rockwool (was any Wool)<br />
+The placeholder recipe for the Magnetic Cavern Cave Codex now requires an Iron Gear (was an Ingot or Dust)<br />
+The placeholder recipe for the Primordial Grotto Cave Codex now requires 4 Eggs (was 1 Egg)<br />
 The placeholder recipe for the Toxic Dump Cave Codex now requires a 4 Uranium Ingots (was 1) 
 - All of these recipes now require 16 Paper instead of 12
 
@@ -150,13 +155,13 @@ The placeholder recipe for the Toxic Dump Cave Codex now requires a 4 Uranium In
 
 ## Misc changes
 
-Renamed a few items from Phantasmic
-Swapped the layers for inputs and outputs on the Reprocessor (now the top is inputs and bottom is outputs)
+Renamed a few items from Phantasmic<br />
+Swapped the layers for inputs and outputs on the Reprocessor (now the top is inputs and bottom is outputs)<br />
 Cryo Fuel can can now be used in the Compression Dynamo
 
 
-Added the ferromagnetic tags to more blocks & items that were missing it
-Added my scrap tags to more blocks & items that were missing it
+Added the ferromagnetic tags to more blocks & items that were missing it<br />
+Added my scrap tags to more blocks & items that were missing it<br />
 Added `forge:slimeballs` tag to Rose Gel Balls
 
 
@@ -170,21 +175,21 @@ Imported Shredded Hide from Capitalia: Inward Expansion
 Updated Forge
 
 
-Added the following mods:
+### Mod additions
 
-Bygone Nether
-Compost (disabled until REI fixes the [loading issue I reported](https://github.com/shedaniel/RoughlyEnoughItems/issues/1653))
-Fullblock Energistics
+Bygone Nether<br />
+Compost (disabled until REI fixes the [loading issue I reported](https://github.com/shedaniel/RoughlyEnoughItems/issues/1653))<br />
+Fullblock Energistics<br />
 Project Red (all modules)
-- Marble has been disabled until the [floating marble bug](https://github.com/MrTJP/ProjectRed/issues/1874) gets fixed
-Redstone Arsenal
+- Marble Caves have been disabled until the [floating marble bug](https://github.com/MrTJP/ProjectRed/issues/1874) gets fixed
+Redstone Arsenal<br />
 Translocators
 
 
 
-Removed the following mods:
+### Mod removals
 
-Configured
+Configured<br />
 Thermaloot
 - I do kinda wanna keep it, but it's such a pain to configure that I just don't feel like dealing with it right now
 Tiny Redstone
@@ -192,63 +197,63 @@ Tiny Redstone
 
 
 
-Updated the following mods:
+### Mod updates
 
-AE 2 Insert Export Card
-Ad Astra: Giselle Addon
-Additional Enchanted Miner
-Applied Energistics 2
-Balm
-Better Advancements
-Bookshelf
-Botarium
-CodeChicken Lib 1.8+
-Crafting Tweaks
-Cupboard
-Ding
-Elytra Slot
-Enchantment Descriptions
-End's Phantasm
-Ender Trigon
-Entity Culling
-FLib
-FTB Quests
-ForgeEndertech
-GeckoLib
-InsaneLib
-Jade
-Jet Boots
-JourneyMap
-Kotlin for Forge
-KubeJS
-Leathered Boots
-Masterful Machinery
-ModernFix
-Moonlight Lib
-Neruina
-Panda's Falling Trees
-PandaLib
-Placebo
-Puzzles Lib
-Quark
-RFTools Base
-Silver Birch
-Sound Physics Remastered
-TACT
-Tempad
-Thermal & Space
-Thermal Foundation
-Tips
-Titanium
-XNet
+AE 2 Insert Export Card<br />
+Ad Astra: Giselle Addon<br />
+Additional Enchanted Miner<br />
+Applied Energistics 2<br />
+Balm<br />
+Better Advancements<br />
+Bookshelf<br />
+Botarium<br />
+CodeChicken Lib 1.8+<br />
+Crafting Tweaks<br />
+Cupboard<br />
+Ding<br />
+Elytra Slot<br />
+Enchantment Descriptions<br />
+End's Phantasm<br />
+Ender Trigon<br />
+Entity Culling<br />
+FLib<br />
+FTB Quests<br />
+ForgeEndertech<br />
+GeckoLib<br />
+InsaneLib<br />
+Jade<br />
+Jet Boots<br />
+JourneyMap<br />
+Kotlin for Forge<br />
+KubeJS<br />
+Leathered Boots<br />
+Masterful Machinery<br />
+ModernFix<br />
+Moonlight Lib<br />
+Neruina<br />
+Panda's Falling Trees<br />
+PandaLib<br />
+Placebo<br />
+Puzzles Lib<br />
+Quark<br />
+RFTools Base<br />
+Silver Birch<br />
+Sound Physics Remastered<br />
+TACT<br />
+Tempad<br />
+Thermal & Space<br />
+Thermal Foundation<br />
+Tips<br />
+Titanium<br />
+XNet<br />
 Zeta
 
 
 
 ## Last-minute fixes I did after posting the third beta
 
-Machines datapack now loads correctly (it adds all the recipes for Masterful Machinery)
-Fixed the Tiny Item Input not using the correct `stone` tag in its recipe
+Machines datapack now loads correctly (it adds all the recipes for Masterful Machinery)<br />
+Fixed the Tiny Item Input not using the correct `stone` tag in its recipe<br />
 Increased the delay between loading screen tips
 
 Updated GeckoLib
